Final_Project_Group5.cydsn/BUILD.log
--------------- Build Started: 05/24/2020 18:40:37 Project: Final_Project_Group5, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/InterruptRoutines.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c InterruptRoutines.c -o .\CortexM3\ARM_GCC_541\Debug\InterruptRoutines.o
In file included from InterruptRoutines.c:24:0:
LIS3DH.h:97:0: warning: "TRANSMIT_BUFFER_SIZE" redefined
 #define TRANSMIT_BUFFER_SIZE 1+LENGTH_BYTE+1
 ^
In file included from InterruptRoutines.c:22:0:
InterruptRoutines.h:21:0: note: this is the location of the previous definition
     #define TRANSMIT_BUFFER_SIZE 1+BYTE_TO_SEND+1
 ^
InterruptRoutines.c: In function 'Custom_ISR_ADC':
InterruptRoutines.c:61:21: error: expected expression before ';' token
         value_temp= ; // Temperature in Celsius
                     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/24/2020 18:40:38 ---------------
